# voice_ordering_system

./: .gitignore  docker-compose.yml  main.py  test.py
backend/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
backend/blueprint/: audio.py  order.py  orderSocket.py  payment.py  session.py  token.py
backend/db/chroma_db/: chroma.sqlite3
backend/interface/: response.py
backend/rag/: CRUD_database.py  rag_morning_eat.py  useModel.py
chroma_db/: chroma.sqlite3
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Header.tsx  Icon.tsx
frontend/src/contexts/: SessionContext.tsx  TokenContext.tsx
frontend/src/hooks/: useVoiceOrder.ts  (+2 more)
grok/: stt.py
project/: .env  README.md  app.py  config.yml  docker-compose.yaml  domain.yml  endpoints.yml  init_db.py  requirements.txt  story_graph.dot  user_dict.txt
project/actions/: actions.py
project/data/: nlu.yml  rules.yml  stories.yml
qwen/: app.py  fine_tuning.py  mcdonalds_menu.db  mcdonalds_menu_data.xlsx  qwen3_dataset.json  rag_retrieval.py  setup_database.py  test.py  try.py  voice_ordering.py  yml_to_json.py
qwen/chroma_db/: chroma.sqlite3
qwen/mcdonalds/: mcdonalds_convert_data_to_doc.py  mcdonalds_menu.db  mcdonalds_menu_data.xlsx  rag_mcdonalds.py
qwen/morning_eat/: CRUD_database.py  menu.json  menu.pkl  morning_eat.db  morning_eat.xlsx  morning_eat_convert_database.py  rag_morning_eat.py  setup_database.py  voice_test.py
(+75 files in other folders)
